[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charm-lib-interface-kubernetes-cni"
version = "0.0.0"
authors = [
  {name="George Kraft", email="george.kraft@canonical.com"},
]
description = "Charm library for kubernetes-cni interface"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ops",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/charmed-kubernetes/charm-lib-interface-kubernetes-cni"
"Bug Tracker" = "https://github.com/charmed-kubernetes/charm-lib-interface-kubernetes-cni/issues"
